--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <title>Teamflow</title>
   </head>
   <body>
-    <div class="nav">
-      <img src="./images/Logo.png" class="menu-logo" alt="teamflow" />
-      <i class="fa fa-close" id="close-menu" onclick="closeMenu()"></i>
+    <div class="hero-section">
+      <div class="nav">
+        <img src="./images/Logo.png" class="menu-logo" alt="teamflow" />
+        <i class="fa fa-close" onclick="closeMenu()" id="close-menu"></i>
         <div class="ul-lists">
           <ul class="lists">
             <li>Product</li>
@@ -25,13 +26,24 @@
           <a href="" class="link2">Sign Up</a>
         </div>
       </div>
-    <div class="hero-section">
       <header class="header-section">
         <div class="Logo">
           <img src="./images/Logo.png" alt="teamflow" />
         </div>
-        
-        <div class ="menubar" onclick="openMenu()"> <i class="fa fa-bars"></i></div>
+        <div class="ul-lists-pc">
+          <ul class="lists-pc">
+            <li>Product</li>
+            <li>Solution</li>
+            <li>Enterprise</li>
+            <li>Pricing</li>
+          </ul>
+        </div>
+
+        <div class="link-pc">
+          <a href="" class="link1">Login</a>
+          <a href="" class="link2">Sign Up</a>
+        </div>
+        <div class = "menubar"> <i class="fa fa-bars" onclick="openMenu()"></i></div>
       </header>
 
       <div id="left-right">
@@ -317,7 +329,7 @@
      </div>
 
      <div class="f-section-con">
-        <div class="f-section1">
+        <div class="f-section">
           <h4>Product</h4>
           <ul class="ul-list1">
             <li>Product</li>
@@ -332,7 +344,7 @@
           </ul>
         </div>
 
-        <div class="f-section2">
+        <div class="f-section">
           <h4>Team</h4>
           <ul class="ul-list2">
             <li>About Us</li>
@@ -343,7 +355,7 @@
           </ul>
         </div>
 
-        <div class="f-section3">
+        <div class="f-section">
           <h4>Solutions</h4>
           <ul class="ul-list3">
             <li>Project Management</li>
@@ -359,7 +371,7 @@
           </ul>
         </div>
 
-        <div class="f-section4">
+        <div class="f-section">
           <h4>Resources</h4>
           <ul class="ul-list4">
             <li>Knowledge Base</li>
@@ -379,9 +391,11 @@
 
 <script>
   const menu = document.querySelector(".nav");
+
   function openMenu(){
     menu.style.display = "flex";
   }
+
   function closeMenu(){
     menu.style.display = "none";
   }
